bk_ida/gccida/g2/check_asm_stack_operands
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_asm_stack_operands/src/reg-stack.c:1074:4: error: expected ';' after expression
rtx v12; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_asm_stack_operands/src/reg-stack.c:1074:5: error: use of undeclared identifier 'v12'
rtx v12; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_asm_stack_operands/src/reg-stack.c:1082:4: error: expected ';' after expression
rtx v20; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_asm_stack_operands/src/reg-stack.c:1082:5: error: use of undeclared identifier 'v20'
rtx v20; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_asm_stack_operands/src/reg-stack.c:1084:4: error: expected ';' after expression
rtx v22; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_asm_stack_operands/src/reg-stack.c:1084:5: error: use of undeclared identifier 'v22'
rtx v22; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_asm_stack_operands/src/reg-stack.c:1107:4: error: expected ';' after expression
rtx insna; // [rsp+10h] [rbp-C0h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_asm_stack_operands/src/reg-stack.c:1107:5: error: use of undeclared identifier 'insna'; did you mean 'insn'?
rtx insna; // [rsp+10h] [rbp-C0h] 
    ^~~~~
    insn
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_asm_stack_operands/src/reg-stack.c:1061:36: note: 'insn' declared here
int  check_asm_stack_operands( rtx insn) 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_asm_stack_operands/src/reg-stack.c:1114:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v2 = (  struct rtx_def *)insn[2]; 
                         ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_asm_stack_operands/src/reg-stack.c:1121:14: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
n_operands = recog_data_0.n_operands; 
             ^~~~~~~~~~~~
             recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_asm_stack_operands/src/reg-stack.c:1122:13: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
n_outputs = recog_data_0.n_operands - asm_operand_n_inputs; 
            ^~~~~~~~~~~~
            recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_asm_stack_operands/src/reg-stack.c:1126:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.n_operands > 0 ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_asm_stack_operands/src/reg-stack.c:1132:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v7 = recog_data_0.operand[v6]; 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_asm_stack_operands/src/reg-stack.c:1142:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[v6++] = rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_asm_stack_operands/src/reg-stack.c:1208:1: error: use of undeclared identifier 'v12'
v12 = recog_data_0.operand[v10]; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_asm_stack_operands/src/reg-stack.c:1208:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v12 = recog_data_0.operand[v10]; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_asm_stack_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_asm_stack_operands/src/reg-stack.c:1210:17: error: use of undeclared identifier 'v12'
if ( *( _WORD *)v12 != 61 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_asm_stack_operands/src/reg-stack.c:1212:10: error: use of undeclared identifier 'v12'
rtuint = v12->fld[0].rtuint; 
         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_asm_stack_operands/src/reg-stack.c:1239:1: error: use of undeclared identifier 'v12'
v12 = recog_data_0.operand[v10]; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_asm_stack_operands/src/obj/reg-stack.o] Error 1
